$Id$

2012-10-24  Christian Franke  <franke@computer.org>

	dev_interface: Rework ATA parameter checks, use new flags
	ata_device::supports_* for new ata_cmd_is_supported().
	Replace ata_cmd_is_ok() by ata_cmd_is_supported() in scsiata.cpp
	and os_win32.cpp.

2012-10-19  Alex Samorukov   <samm@os2.kiev.ua>
	os_freebsd.cpp - fixed 3ware twe controller support broken 
	by inerface migration.

2012-10-18  Christian Franke  <franke@computer.org>

	utility.cpp: Add missing errno clear in split_selective_arg()
	(Debian bug 690108).
	Remove unused function split_report_arg2().

2012-10-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: define _WIN32.  This fixes build on
	Cygwin with new w32api-headers.

2012-10-18  Alex Samorukov  <samm@os2.kiev.ua>

	Compile fixes for Areca patch on FreeBSD.
	Added support for the /dev/twsX (3ware 9750) controller on FreeBSD.
	Manual pages updated with /dev/twsX device
	FreeBSD: Migrate 3ware interface to ata_pass_through()
	FreeBSD: fix missing drives detection on -d 3ware
	FreeBSD: 3ware - do not pass buffers direcly, use memcpy() instead
	FreeBSD: improved detection of 3ware/LSI controllers

2012-10-16  Christian Franke  <franke@computer.org>

	Compile fixes for Areca patch:
	Add missing includes.  Add GPL header.
	Add dev_areca.* to configure.in and Makefile.am.

2012-10-16  Hank Wu  <hank@areca.com.tw>

	Move common Areca code from os_freebsd.cpp, os_linux.cpp, os_win32.cpp
	to new files dev_areca.h, dev_areca.cpp.
	Add SAS support for FreeBSD and Linux.

2012-10-10  Christian Franke  <franke@computer.org>

	Rename old CHANGELOG to ChangeLog-5.0-6.0.
	Start new ChangeLog.

2012-10-10  Christian Franke  <franke@computer.org>

	smartmontools 6.0