@@ -461,11 +461,10 @@ Please see the \fBsmartctl\fP(8) man page for further details.
 
 .I areca,N/E
 \- [FreeBSD, Linux, Windows and Cygwin only] [NEW EXPERIMENTAL SMARTD FEATURE] the
-device consists of one or more SATA disks connected to an Areca SAS RAID controller.
+device consists of one or more SATA or SAS disks connected to an Areca SAS RAID controller.
 The integer N (range 1 to 128) denotes the channel (slot) and E (range
 1 to 8) denotes the enclosure.
-Important: This requires upcoming Areca SAS controller firmware version 1.51 or a
-recent beta version.
+Important: This requires Areca SAS controller firmware version 1.51 or later.
 
 .\" %ENDIF OS FreeBSD Linux Windows Cygwin
 .\" %IF OS FreeBSD Linux
